--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 cryptography
-psutil
-requests
-pdfkit 
-pycryptodome
-binaryornot
-dnspython
-pyqt5
-qdarkstyle
-pyqt5-tools
-pyqtwebengine
+PyQt5>=5.15.0
+qdarkstyle>=3.0.2
+pycryptodome>=3.15.0
+psutil>=5.9.0
+requests>=2.27.1
+pdfkit>=1.0.0
+dnspython>=2.2.1
+cryptography>=37.0.0
